--- a/site/pom.xml
+++ b/site/pom.xml
@@ -19,7 +19,6 @@
 		<dependency>
 			<groupId>com.damnhandy</groupId>
 			<artifactId>handy-uri-templates</artifactId>
-			<version>1.1.7</version>
 		</dependency>
 		<dependency>
 			<groupId>org.soluvas</groupId>
@@ -167,6 +166,7 @@
               				org.apache.felix.service.command;resolution:=optional, 
                             org.apache.felix.gogo.commands;resolution:=optional 							
 						</Import-Package>
+						<Export-Package>org.soluvas.web.site.*</Export-Package>
 						<DynamicImport-Package>*</DynamicImport-Package> <!-- why? http://team.ops4j.org/browse/PAXWICKET-375 -->
 					</instructions>
 				</configuration>
