--- a/site/pom.xml
+++ b/site/pom.xml
@@ -73,9 +73,9 @@
 		</dependency>
 
 		<dependency>
-		    <groupId>com.google.code</groupId>
-		    <artifactId>sitemapgen4j</artifactId>
-		    <version>1.0.1</version>
+		    <groupId>org.eclipse.persistence</groupId>
+		    <artifactId>org.eclipse.persistence.moxy</artifactId>
+		    <version>2.5.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.antlr</groupId>
