--- a/login/pom.xml
+++ b/login/pom.xml
@@ -60,7 +60,14 @@
 		<dependency>
 			<groupId>com.restfb</groupId>
 			<artifactId>restfb</artifactId>
+			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.twitter4j</groupId>
+			<artifactId>twitter4j-core</artifactId>
+			<optional>true</optional>
+		</dependency>
+		
 		<dependency>
 			<groupId>org.expressme</groupId>
 			<artifactId>JOpenId</artifactId>
