--- a/pom.xml
+++ b/pom.xml
@@ -343,6 +343,25 @@
 
 	<profiles>
 		<profile>
+			<!-- http://stackoverflow.com/a/22296107/122441 -->
+			<id>doclint-java8-disable</id>
+			<activation>
+				<jdk>[1.8,)</jdk>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-javadoc-plugin</artifactId>
+						<configuration>
+							<!-- http://blog.joda.org/2014/02/turning-off-doclint-in-jdk-8-javadoc.html -->
+							<additionalparam>-Xdoclint:none</additionalparam>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+	    </profile>
+		<profile>
 			<!-- To deploy to bippo-gk, use: mvn -Pbippo-gk -o -DskipTests clean install 
 				deploy -->
 			<id>bippo-gk</id>
