--- a/pom.xml
+++ b/pom.xml
@@ -168,10 +168,7 @@
 				<artifactId>wicket-spring</artifactId>
 				<version>${wicket.version}</version>
 				<exclusions>
-					<exclusion>
-						<groupId>cglib</groupId>
-						<artifactId>cglib</artifactId>
-					</exclusion>
+					<!-- NOTE: wicket requires cglib at least 2.2.2, but to be portable, cglib must use version 3.1+ -->
 					<!-- asm 3.3.1 depended by cglib 2.2.2 -->
 					<!-- replaced by asm 4.1 as required by parboiled, note it conflicts with standard jersey -->
 					<exclusion>
